Source/Alternet.UI/Native/TransformMatrix.Generated.cs

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2025 AlterNET Software.</auto-generated>
#nullable enable
#pragma warning disable

using System;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Security;
namespace Alternet.UI.Native
{
    internal partial class TransformMatrix : NativeObject
    {
        static TransformMatrix()
        {
        }
        
        public TransformMatrix()
        {
            SetNativePointer(NativeApi.TransformMatrix_Create_());
        }
        
        public TransformMatrix(IntPtr nativePointer) : base(nativePointer)
        {
        }
        
        public double M11
        {
            get
            {
                CheckDisposed();
                return NativeApi.TransformMatrix_GetM11_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.TransformMatrix_SetM11_(NativePointer, value);
            }
        }
        
        public double M12
        {
            get
            {
                CheckDisposed();
                return NativeApi.TransformMatrix_GetM12_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.TransformMatrix_SetM12_(NativePointer, value);
            }
        }
        
        public double M21
        {
            get
            {
                CheckDisposed();
                return NativeApi.TransformMatrix_GetM21_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.TransformMatrix_SetM21_(NativePointer, value);
            }
        }
        
        public double M22
        {
            get
            {
                CheckDisposed();
                return NativeApi.TransformMatrix_GetM22_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.TransformMatrix_SetM22_(NativePointer, value);
            }
        }
        
        public double DX
        {
            get
            {
                CheckDisposed();
                return NativeApi.TransformMatrix_GetDX_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.TransformMatrix_SetDX_(NativePointer, value);
            }
        }
        
        public double DY
        {
            get
            {
                CheckDisposed();
                return NativeApi.TransformMatrix_GetDY_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.TransformMatrix_SetDY_(NativePointer, value);
            }
        }
        
        public bool IsIdentity
        {
            get
            {
                CheckDisposed();
                return NativeApi.TransformMatrix_GetIsIdentity_(NativePointer);
            }
            
        }
        
        public void Initialize(double m11, double m12, double m21, double m22, double dx, double dy)
        {
            CheckDisposed();
            NativeApi.TransformMatrix_Initialize_(NativePointer, m11, m12, m21, m22, dx, dy);
        }
        
        public void Reset()
        {
            CheckDisposed();
            NativeApi.TransformMatrix_Reset_(NativePointer);
        }
        
        public void Multiply(TransformMatrix matrix)
        {
            CheckDisposed();
            NativeApi.TransformMatrix_Multiply_(NativePointer, matrix.NativePointer);
        }
        
        public void Translate(double offsetX, double offsetY)
        {
            CheckDisposed();
            NativeApi.TransformMatrix_Translate_(NativePointer, offsetX, offsetY);
        }
        
        public void Scale(double scaleX, double scaleY)
        {
            CheckDisposed();
            NativeApi.TransformMatrix_Scale_(NativePointer, scaleX, scaleY);
        }
        
        public void Rotate(double angle)
        {
            CheckDisposed();
            NativeApi.TransformMatrix_Rotate_(NativePointer, angle);
        }
        
        public void Invert()
        {
            CheckDisposed();
            NativeApi.TransformMatrix_Invert_(NativePointer);
        }
        
        public Alternet.Drawing.PointD TransformPoint(Alternet.Drawing.PointD point)
        {
            CheckDisposed();
            return NativeApi.TransformMatrix_TransformPoint_(NativePointer, point);
        }
        
        public Alternet.Drawing.SizeD TransformSize(Alternet.Drawing.SizeD size)
        {
            CheckDisposed();
            return NativeApi.TransformMatrix_TransformSize_(NativePointer, size);
        }
        
        public bool IsEqualTo(TransformMatrix other)
        {
            CheckDisposed();
            return NativeApi.TransformMatrix_IsEqualTo_(NativePointer, other.NativePointer);
        }
        
        public int GetHashCode_()
        {
            CheckDisposed();
            return NativeApi.TransformMatrix_GetHashCode__(NativePointer);
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr TransformMatrix_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern double TransformMatrix_GetM11_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TransformMatrix_SetM11_(IntPtr obj, double value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern double TransformMatrix_GetM12_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TransformMatrix_SetM12_(IntPtr obj, double value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern double TransformMatrix_GetM21_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TransformMatrix_SetM21_(IntPtr obj, double value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern double TransformMatrix_GetM22_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TransformMatrix_SetM22_(IntPtr obj, double value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern double TransformMatrix_GetDX_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TransformMatrix_SetDX_(IntPtr obj, double value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern double TransformMatrix_GetDY_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TransformMatrix_SetDY_(IntPtr obj, double value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TransformMatrix_GetIsIdentity_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TransformMatrix_Initialize_(IntPtr obj, double m11, double m12, double m21, double m22, double dx, double dy);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TransformMatrix_Reset_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TransformMatrix_Multiply_(IntPtr obj, IntPtr matrix);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TransformMatrix_Translate_(IntPtr obj, double offsetX, double offsetY);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TransformMatrix_Scale_(IntPtr obj, double scaleX, double scaleY);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TransformMatrix_Rotate_(IntPtr obj, double angle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TransformMatrix_Invert_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.PointD TransformMatrix_TransformPoint_(IntPtr obj, Alternet.Drawing.PointD point);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.SizeD TransformMatrix_TransformSize_(IntPtr obj, Alternet.Drawing.SizeD size);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TransformMatrix_IsEqualTo_(IntPtr obj, IntPtr other);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TransformMatrix_GetHashCode__(IntPtr obj);
            
        }
    }
}
